// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`myfares pages services should render correctly when no services present 1`] = `
<Fragment>
  <BaseLayout
    description="View and access your services in one place."
    myFaresEnabled={true}
    showNavigation={true}
    title="Services - Create Fares Data Service"
  >
    <div
      className="govuk-grid-row"
    >
      <div
        className="govuk-grid-column-full"
      >
        <h1
          className="govuk-heading-xl govuk-!-margin-bottom-3"
        >
          Services
        </h1>
        <table
          className="govuk-table"
        >
          <thead
            className="govuk-table__head"
          >
            <tr
              className="govuk-table__row"
            >
              <th
                className="govuk-table__header"
                scope="col"
              >
                Service description
              </th>
              <th
                className="govuk-table__header"
                scope="col"
              >
                Start date
              </th>
              <th
                className="govuk-table__header"
                scope="col"
              >
                End date
              </th>
              <th
                className="govuk-table__header"
                scope="col"
              >
                Service status
              </th>
            </tr>
          </thead>
          <tbody
            className="govuk-table__body"
          />
        </table>
      </div>
    </div>
  </BaseLayout>
</Fragment>
`;

exports[`myfares pages services should render correctly when services present 1`] = `
<Fragment>
  <BaseLayout
    description="View and access your services in one place."
    myFaresEnabled={true}
    showNavigation={true}
    title="Services - Create Fares Data Service"
  >
    <div
      className="govuk-grid-row"
    >
      <div
        className="govuk-grid-column-full"
      >
        <h1
          className="govuk-heading-xl govuk-!-margin-bottom-3"
        >
          Services
        </h1>
        <table
          className="govuk-table"
        >
          <thead
            className="govuk-table__head"
          >
            <tr
              className="govuk-table__row"
            >
              <th
                className="govuk-table__header"
                scope="col"
              >
                Service description
              </th>
              <th
                className="govuk-table__header"
                scope="col"
              >
                Start date
              </th>
              <th
                className="govuk-table__header"
                scope="col"
              >
                End date
              </th>
              <th
                className="govuk-table__header"
                scope="col"
              >
                Service status
              </th>
            </tr>
          </thead>
          <tbody
            className="govuk-table__body"
          >
            <tr
              className="govuk-table__row"
              key="0"
            >
              <td
                className="govuk-table__cell"
              >
                1
                 - 
                Awesome service
              </td>
              <td
                className="govuk-table__cell"
              >
                1/1/2021
              </td>
              <td
                className="govuk-table__cell"
              >
                16/9/2021
              </td>
              <td
                className="govuk-table__cell"
              >
                <strong
                  className="govuk-tag govuk-tag--red"
                >
                  Expired
                </strong>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </BaseLayout>
</Fragment>
`;
